# my-kopf-operator

./: Dockerfile  README.md  pyproject.toml  requirements.txt
crds/: appdeployment-crd.yaml
manifests/: operator-deployment.yaml  sample-cr.yaml
operator/: handlers.py  main.py
tests/: test_operator.py
