[tool.pytest.ini_options]
python_files = "tests.py" "test_*.py" "*_tests.py"
asyncio_mode = "auto"

[tool.poetry]
name = "my-operator"
version = "0.1.0"
description = "A Kopf-based Kubernetes operator."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kopf = ">=1.35"
kr8s = ">=0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"
pytest-mock = "^3.7"
